hello-world/k8s/example-spring-cloud-kubernetes-hello-world-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: example-spring-cloud-kubernetes-hello-world
  namespace: example-spring-cloud-kubernetes-hello-world
  labels:
    app: example-spring-cloud-kubernetes-hello-world
spec:
  type: ClusterIP
  ports:
    - port: 8080
  selector:
    app: example-spring-cloud-kubernetes-hello-world
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: example-spring-cloud-kubernetes-hello-world
  namespace: example-spring-cloud-kubernetes-hello-world
spec:
  replicas: 1
  selector:
    matchLabels:
      app: example-spring-cloud-kubernetes-hello-world
  template:
    metadata:
      labels:
        app: example-spring-cloud-kubernetes-hello-world
      annotations:
        # 监控
        prometheus.io/scrape: "true"
        prometheus.io/port: "8080"
        prometheus.io/path: "/actuator/prometheus"
    spec:
      containers:
      - name: example-spring-cloud-kubernetes-hello-world
        image: toquery/example-spring-cloud-kubernetes-hello-world:0.0.1
        ports:
        - containerPort: 8080
        readinessProbe:
          httpGet:
            path: /actuator/health/readiness
            port: 8080
          initialDelaySeconds: 60
          timeoutSeconds: 3
          periodSeconds: 10
          failureThreshold: 3
        livenessProbe:
          httpGet:
            path: /actuator/health/liveness
            port: 8080
          initialDelaySeconds: 180
          timeoutSeconds: 3
          periodSeconds: 10
          failureThreshold: 3
